--- a/src/app/left-side/left-side.component.html
+++ b/src/app/left-side/left-side.component.html
@@ -1,62 +1,63 @@
-<div class = "left-column" id = "left-column" [ngClass]="isToggled ? 'left-column open-left-column-style' : 'left-column'">
-    <div class = "bars-icon">
-        <input type = "hidden" id="option-value" value = "openMenu"/>
-        <button id = "menu-icon" (click) = "toggleLeftmenu()">
-            <div class = "menu-icon"> </div>
-            <div class = "menu-icon"> </div>
-            <div class = "menu-icon"> </div>
+<div class="left-column" id="left-column" [ngClass]="isToggled ? 'left-column open-left-column-style' : 'left-column'">
+    <div class="bars-icon">
+        <input type="hidden" id="option-value" value="openMenu" />
+        <button id="menu-icon" (click)="toggleLeftmenu()">
+            <div class="menu-icon"> </div>
+            <div class="menu-icon"> </div>
+            <div class="menu-icon"> </div>
         </button>
     </div>
-    <ul id = "side-menu">
+    <ul id="side-menu">
         <li>
-        <div id = "sun-icon">
-            <span id = "sun-symbol"></span>
-            <span *ngIf = "isToggled" class = "menu-name">My Day</span>
-        </div>
+            <div id="sun-icon">
+                <span id="sun-symbol"></span>
+                <span *ngIf="isToggled" class="menu-name">My Day</span>
+            </div>
         </li>
         <li>
-        <div id = "star-icon">
-            <span id = "star-symbol"></span>
-            <span *ngIf = "isToggled" class = "menu-name">Important</span>
-        </div>
+            <div id="star-icon">
+                <span id="star-symbol"></span>
+                <span *ngIf="isToggled" class="menu-name">Important</span>
+            </div>
         </li>
         <li>
-        <div id = "calendar-icon">
-            <span id = "calendar-symbol"></span>
-           <span *ngIf = "isToggled" class = "menu-name">Planned</span>
-        </div>
+            <div id="calendar-icon">
+                <span id="calendar-symbol"></span>
+                <span *ngIf="isToggled" class="menu-name">Planned</span>
+            </div>
         </li>
         <li>
-        <div id = "user-icon">
-            <span id = "user-symbol"></span>
-            <span *ngIf = "isToggled" class = "menu-name">Assigned To Me</span>
-        </div>
+            <div id="user-icon">
+                <span id="user-symbol"></span>
+                <span *ngIf="isToggled" class="menu-name">Assigned To Me</span>
+            </div>
         </li>
         <li>
-        <div id = "flag-icon">
-            <span id = "flag-symbol"></span>
-            <span *ngIf = "isToggled" class = "menu-name">Flagged Email</span>
-        </div>
+            <div id="flag-icon">
+                <span id="flag-symbol"></span>
+                <span *ngIf="isToggled" class="menu-name">Flagged Email</span>
+            </div>
         </li>
         <li>
-        <div id = "home-icon">
-            <span id = "home-symbol"></span>
-            <span *ngIf = "isToggled" class = "menu-name">Tasks</span>
-        </div>
+            <div id="home-icon">
+                <span id="home-symbol"></span>
+                <span *ngIf="isToggled" class="menu-name">Tasks</span>
+            </div>
         </li>
-        <div id ="created-list">
+        <div id="created-list">
             <div *ngFor="let item of tasks">
-                <div *ngIf="'Task' !== item.taskName" class = "new-list" (click) = "displayTaskInfo(item)">
-                    <span class = "list-icon"></span>
-                    <span *ngIf = "isToggled" class = "menu-name">{{item.taskName}}</span>
-                    <span *ngIf = "isToggled" class = "task-count">{{getTaskCount(item)}}</span>
+                <div *ngIf="'Tasks' !== item.taskName" class="new-list" (click)="displayTaskInfo(item)">
+                    <span class="list-icon"></span>
+                    <span *ngIf="isToggled" class="menu-name">{{item.taskName}}</span>
+                    <span *ngIf="isToggled" class="task-count">{{getTaskCount(item)}}</span>
                 </div>
             </div>
         </div>
     </ul>
-    <div id = "plus-icon">
-        <span id = "plus-symbol" (click) = "toggleLeftDivByPlus()"></span>
-        <input #newList *ngIf = "isToggled" type = "text" id = "new-list" placeholder = "New list" class = "menu-name" (keyup.enter) = "addTask(newList)" maxlength="255"/>
-        <span *ngIf = "isToggled" id = "group-symbol"></span> 
+    <div id="plus-icon">
+        <span id="plus-symbol" (click)="toggleLeftDivByPlus()"></span>
+        <input #newList *ngIf="isToggled" type="text" id="new-list" placeholder="New list" class="menu-name"
+            (keyup.enter)="addTask(newList)" maxlength="255" />
+        <span *ngIf="isToggled" id="group-symbol"></span>
     </div>
 </div>
